WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173976
Slight clean up of WebResourceLoadStatisticsStore
https://bugs.webkit.org/show_bug.cgi?id=173976
Summary
Slight clean up of WebResourceLoadStatisticsStore
Chris Dumez
Reported
2017-06-29 10:53:51 PDT
Slight clean up of WebResourceLoadStatisticsStore.
Attachments
Patch
(9.84 KB, patch)
2017-06-29 10:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(9.83 KB, patch)
2017-06-29 11:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.10 KB, patch)
2017-06-29 11:52 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-06-29 10:58:36 PDT
Created
attachment 314143
[details]
Patch
Chris Dumez
Comment 2
2017-06-29 11:13:05 PDT
Created
attachment 314145
[details]
Patch
Brent Fulgham
Comment 3
2017-06-29 11:48:50 PDT
Comment on
attachment 314145
[details]
Patch r=me. I'm not sure why the WPE bot is red though. Doesn't seem like your changes should have affected it.
Chris Dumez
Comment 4
2017-06-29 11:49:59 PDT
(In reply to Brent Fulgham from
comment #3
)
> Comment on
attachment 314145
[details]
> Patch > > r=me. I'm not sure why the WPE bot is red though. Doesn't seem like your > changes should have affected it.
ource/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/WebResourceLoadStatisticsStore.cpp.o.d -o Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/WebResourceLoadStatisticsStore.cpp.o -c /home/ews/igalia-wpe-ews/WebKit/Source/WebKit2/UIProcess/WebResourceLoadStatisticsStore.cpp /home/ews/igalia-wpe-ews/WebKit/Source/WebKit2/UIProcess/WebResourceLoadStatisticsStore.cpp: In function 'const WTF::OptionSet<WebKit::WebsiteDataType>& WebKit::dataTypesToRemove()': /home/ews/igalia-wpe-ews/WebKit/Source/WebKit2/UIProcess/WebResourceLoadStatisticsStore.cpp:62:103: error: variable 'WTF::NeverDestroyed<WTF::OptionSet<WebKit::WebsiteDataType> > dataTypes' has initializer but incomplete type Will fix before landing.
Chris Dumez
Comment 5
2017-06-29 11:52:58 PDT
Created
attachment 314148
[details]
Patch
WebKit Commit Bot
Comment 6
2017-06-29 12:51:09 PDT
Comment on
attachment 314148
[details]
Patch Clearing flags on attachment: 314148 Committed
r218958
: <
http://trac.webkit.org/changeset/218958
>
WebKit Commit Bot
Comment 7
2017-06-29 12:51:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug