Slight clean up of WebResourceLoadStatisticsStore https://bugs.webkit.org/show_bug.cgi?id=173976

Reviewed by Brent Fulgham.

* UIProcess/WebResourceLoadStatisticsStore.cpp:
(WebKit::dataTypesToRemove):
(WebKit::WebResourceLoadStatisticsStore::classifyResource):
(WebKit::WebResourceLoadStatisticsStore::removeDataRecords):
(WebKit::WebResourceLoadStatisticsStore::setResourceLoadStatisticsEnabled):
(WebKit::WebResourceLoadStatisticsStore::registerSharedResourceLoadObserver):
(WebKit::WebResourceLoadStatisticsStore::grandfatherExistingWebsiteData):
(WebKit::WebResourceLoadStatisticsStore::stopMonitoringStatisticsStorage):
(WebKit::initializeDataTypesToRemove): Deleted.
* UIProcess/WebResourceLoadStatisticsStore.h:
(WebKit::WebResourceLoadStatisticsStore::coreStore): Deleted.


Canonical link: https://commits.webkit.org/190820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218958 268f45cc-cd09-0410-ab3c-d52691b4dbfc